[package]
name = "piston_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.11.2"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
moka = { version = "0.12.5", features = ["sync"] }
piston_ipc = { version = "0.1.0", path = "../piston_ipc" }
piston_shared = { version = "0.1.0", path = "../piston_shared" }
rand = "0.8.5"
