[package]
name = "piston_ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = "1.2.1"
lazy_static = "1.4.0"
log = "0.4.21"
piston_shared = { version = "0.1.0", path = "../piston_shared" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
