[package]
name = "piston_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_ipc = { version = "0.1.0", path = "../piston_ipc" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
